# xsens-tools

./: README.md
libraries/libxsparser/: CMakeLists.txt
libraries/libxsparser/include/xsparser/: xsmessage.h  xsparser.h
libraries/libxsparser/src/: xsparser.c
libraries/libxsparser/tests/: CMakeLists.txt  parser.c
tools/xsmessage-dump/: CMakeLists.txt
tools/xsmessage-dump/src/: main.c
